--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
         </div>
       </div>
     </div>
+    <span>
+      <a
+        href="https://github.com/MelanieMayne/weather-app-project"
+        target="_blank"
+        >Open-source code</a
+      >
+      by Melanie Richardson</span
+    >
     <script src="src/script.js"></script>
   </body>
 </html>
