added CSS to footer

--- a/index.html
+++ b/index.html
@@ -133,13 +133,15 @@
         </div>
       </div>
     </div>
-    <span>
-      <a
-        href="https://github.com/MelanieMayne/weather-app-project"
-        target="_blank"
-        >Open-source code</a
-      >
-      by Melanie Richardson</span
+    <span class="footer">
+      <small>
+        <a
+          href="https://github.com/MelanieMayne/weather-app-project"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Melanie Richardson</small
+      ></span
     >
     <script src="src/script.js"></script>
   </body>
