--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </div>
     </div>
-    <span class="footer">
+    <footer>
       <small>
         <a
           href="https://github.com/MelanieMayne/weather-app-project"
@@ -141,8 +141,8 @@
           >Open-source code</a
         >
         by Melanie Richardson</small
-      ></span
-    >
+      >
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
