--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,7 +29,9 @@
       <div class="card">
         <div class="card-body body-of-app">
           <header>
-            <button id="current-location-button">📍</button>
+            <button id="current-location-button">
+              <i class="bi bi-geo-alt-fill"></i>
+            </button>
             <button id="temp-unit-button">F°</button>
             <form class="mx-auto" style="width: 285px" id="search-form">
               <input
@@ -38,7 +44,13 @@
             </form>
           </header>
           <div class="row g-3">
-            <div class="col-4 text-center" id="main-weather-icon">⛅</div>
+            <div class="col-4 text-center">
+              <img
+                id="main-weather-icon"
+                src="https://openweathermap.org/img/wn/01d@2x.png"
+                alt="clear sky"
+              />
+            </div>
             <div class="col-4 text-center">
               <div class="row">
                 <div class="col" id="date-and-time">
