--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="card-group" id="forecast"></div>
       </div>
     </div>
-    <footer>
+    <footer class="footer">
       <small>
         <a
           href="https://github.com/MelanieMayne/weather-app-project"
