--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Weather application project, built by Female Front-End Web Developer, Melanie Richardson, using HTML, CSS, and Vanilla JS.">
     <title>Weather App</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -42,14 +43,14 @@
           </form>
         </header>
         <div class="row g-3">
-          <div class="col-4 text-center">
+          <div class="col-sm-4 text-center">
             <img
               id="main-weather-icon"
               src="https://openweathermap.org/img/wn/01d@2x.png"
               alt="clear sky"
             />
           </div>
-          <div class="col-4 text-center">
+          <div class="col-sm-8 col-md-4 text-center">
             <div class="row">
               <div class="col" id="date-and-time">
                 <small></small>
@@ -75,7 +76,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-4 extra-weather">
             <div class="row">
               <div class="col weather-label">Wind</div>
               <div class="col text-center weather-label-data">
